/*
 * Copyright (c) 2013-2019 the original author or authors.
 *
 * MIT License
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
package eapli.base.clientusermanagement.domain;

import javax.persistence.*;

import eapli.framework.domain.model.AggregateRoot;
import eapli.framework.domain.model.DomainEntities;
import eapli.framework.infrastructure.authz.domain.model.SystemUser;

import java.util.Objects;

/**
 * A Client User.
 *
 * This class represents client users. It follows a DDD approach where User
 * is the root entity of the Base User Aggregate and all of its properties
 * are instances of value objects. A Client User references a System User
 *
 * This approach may seem a little more complex than just having String or
 * native type attributes but provides for real semantic of the domain and
 * follows the Single Responsibility Pattern
 *
 * @author Jorge Santos ajs@isep.ipp.pt
 *
 */
@Entity
@Table(uniqueConstraints = @UniqueConstraint(columnNames = {"phoneNumber"}))
public class ClientUser implements AggregateRoot<VAT> {

    @Version
    private Long version;

    @EmbeddedId
    private VAT vat;

    @Embedded
    private PhoneNumber phoneNumber;

    @Embedded
    private VerifyGender gender;

    @Embedded
    private Birthday birthday;

    @Embedded
    private DeliveringPostalAddresses deliveringPostalAddresses;

    @Embedded
    private BillingPostalAddresses billingPostalAddresses;



    /**
     * cascade = CascadeType.NONE as the systemUser is part of another aggregate
     */
    @OneToOne()
    private SystemUser systemUser;

    public BillingPostalAddresses getBillingPostalAddresses() {
        return billingPostalAddresses;
    }

    public DeliveringPostalAddresses getDeleveringPostalAddresses() {
        return deliveringPostalAddresses;
    }

    public ClientUser(final SystemUser user, final VAT vat, final PhoneNumber phoneNumber, final VerifyGender gender, final Birthday birthday, final DeliveringPostalAddresses deliveringPostalAddresses, final BillingPostalAddresses billingPostalAddresses) {
        if (vat == null || user == null || phoneNumber == null || gender == null || birthday == null || deliveringPostalAddresses == null || billingPostalAddresses == null) {
            throw new IllegalArgumentException();
        }
        this.systemUser = user;
        this.vat = vat;
        this.phoneNumber = phoneNumber;
        this.gender = gender;
        this.birthday = birthday;
        this.deliveringPostalAddresses = deliveringPostalAddresses;
        this.billingPostalAddresses = billingPostalAddresses;

    }

    protected ClientUser() {
        // for ORM only
    }

    public SystemUser user() {
        return this.systemUser;
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        ClientUser that = (ClientUser) o;
        return Objects.equals(vat, that.vat) && Objects.equals(systemUser, that.systemUser);
    }

    @Override
    public int hashCode() {
        return DomainEntities.hashCode(this);
    }

    @Override
    public boolean sameAs(final Object other) {
        return DomainEntities.areEqual(this, other);
    }

    @Override
    public VAT identity() {
        return this.vat;
    }


}
